app/static/css/style.css
/* regular/template CSS */

* {
     margin: 0;
     padding: 0;
}

body {
     padding: 5%;
     margin: auto;
}

.title {
     font-size: 72px;
     font-weight: bold;
     margin: 0;
     line-height: 95%;
}

.subtitle {
     font-size: 24px;
     margin: 0;
     font-style: italic;
}

.bar {
     font-size: 16px;
     font-style: normal;
}

.bar a {
     transition: 250ms;
}

.bar a:hover {
     color: #ff8ff0;
     text-decoration: none;
     transition: 250ms;
}

.bar-here {
     background-color: #ff8ff0;
     border-radius: 5px;
     padding: 0.25em 0.5em;
     color: white;
}

.bar-here:hover {
     background-color: #007bff;
     color: white !important;
}

.text-center .button:active {
     outline: 1px;
}

.slidecontainer {
  width: 100%;
}

.slider {
  -webkit-appearance: none;
  width: 100%;
  height: 25px;
  background: #d3d3d3;
  outline: none;
  opacity: 0.7;
  -webkit-transition: .2s;
  transition: opacity .2s;
}

.slider:hover {
  opacity: 1;
}

.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 25px;
  height: 25px;
  background: #4CAF50;
  cursor: pointer;
}

.slider::-moz-range-thumb {
  width: 25px;
  height: 25px;
  background: #4CAF50;
  cursor: pointer;
}

.sidenav {
  width: 20vw;
  height: 50vh;
  padding: 2vw;
  position: fixed;
  z-index: 1;
  background-color: white;
  border: 1px solid gray;
  border-radius: 10px;
  overflow-x: hidden;
  padding-top: 20px;
}

@media screen and (max-height: 450px) {
  .sidenav {padding-top: 15px;}
  .sidenav a {font-size: 18px;}
}

div.overflow-auto {
  height: 50px;
}

/* landing page CSS */

.landing-body {
     background: rgb(0,123,255);
     background-image: linear-gradient(135deg, rgba(0,123,255,1) 0%, rgba(255,143,240,1) 75%);
     color: white;
     height: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
}

.landing-title {
     font-size: 18vw;
     font-weight: bold;
     margin: 0;
     line-height: 110%;
}

.landing-subtitle {
     font-size: 24px;
     margin: 0;
     font-style: italic;
}

